src/test/deca/context/invalid/resultats/test_inexistent_superclass-cont.res
./src/test/deca/context/invalid/test_inexistent_superclass.deca:9:0: The class A doesn't have a superclass or no exist
